# ESPresso

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  partitions.csv  platformio.ini  sdkconfig.credentials.example
.cache/clangd/index/: blake2s.c.564BF55759F01ED5.idx  blake2s.c.CBB36FA1AB6D709A.idx  blake2s.h.079963809A625548.idx  blake2s.h.0AEA260F44A444D9.idx  blake2s.h.6D30811DAA37F83F.idx  chacha20.c.0D10C93D5BB71BAF.idx  chacha20.c.5C872C8F54AEBE0F.idx  chacha20.h.019C935C0B1C7B3C.idx  chacha20.h.1C285BEAD777C534.idx  chacha20poly1305.c.522189EA94A155F1.idx  chacha20poly1305.c.9012DD3E8A52E3E9.idx  chacha20poly1305.h.03340D6C577CDE32.idx  chacha20poly1305.h.591B385738FDDE1C.idx  chacha20poly1305.h.84FFC2C9903D560B.idx  crypto.c.3978220E42CEB141.idx  crypto.c.88AF56343C0B90E4.idx  crypto.h.2620BDDAC4F635FA.idx  crypto.h.F77112F9B31FE782.idx  led_indicator.c.26F766463024A4BA.idx  led_indicator.h.65F7C3805A2648B5.idx  lwip_compat.h.0220DDFF0611F40A.idx  lwip_compat.h.815C3B4208DB1C72.idx  main.c.7D519FB21B316299.idx  mdns.h.C1EA250003FA0EB8.idx  mdns_browser.c.2EB55ED80D9B4CA0.idx  mdns_browser.h.DE897FD078F3C3E2.idx  mdns_console.c.BC9E9ADCC01B80A5.idx  mdns_debug.c.C412BAC20E47130A.idx  mdns_debug.h.985BF1B49C1C3B23.idx  (+95 more)
components/: microlink_main  wireguard_lwip
main/: CMakeLists.txt  Kconfig.projbuild  led_indicator.c  led_indicator.h  main.c  wol_dashboard.c  wol_dashboard.h  wol_monitor.c  wol_monitor.h  wol_sender.c  wol_storage.c  wol_storage.h  wol_webui.h
src/: main.c  wol_dashboard.h  wol_monitor.c  wol_sender.h
(+3 files in other folders)
